# assistants

./: .gitignore  README.md  prompt_injection_identifier.py  pyproject.toml  requirements.txt
assistant_db/: assistants.db
assistants/examples/: code_assistant_data_visualization.py  loan_estimate_assistant.py  product_description_assistant.py  summarize_assistant_operations.py
assistants/langassist/: summarize_assistant.py
assistants/langregister/: base.py  mongo_db_atlas.py
assistants/llm_assistants/: assistants.py  openai_assistants.py
assistants/utils/: utilities.py
examples/: summarize_assistant_operations.py
langassist/: base.py  summarize_assistant.py
langregister/: mongo_db_atlas.py
